--- a/TEKA/projects/templates/projects/single-project.html
+++ b/TEKA/projects/templates/projects/single-project.html
@@ -1,9 +1,11 @@
 {% extends 'main.html' %}
 {% block content %}
 <h1>Single Project Template</h1>
-  {{i.id}}
-  {{i.title}}
-  {{i.description}}
+  {{project.id}}
+  <br>
+  {{project.title}}
+  <br>
+  {{project.description}}
   <br>
 
 {% endblock content %}
