feat:Adding Section 4 (CRUD) operations

--- a/TEKA/templates/main.html
+++ b/TEKA/templates/main.html
@@ -4,6 +4,7 @@
         <title> TEKA Project</title>
     </head>
     <body>
+        {% include 'nav_bar.html' %}
         <h1> this is the main templatte </h1>
         {% block content %}
         {% endblock content %}
