--- a/TEKA/projects/templates/projects/projects.html
+++ b/TEKA/projects/templates/projects/projects.html
@@ -1,16 +1,24 @@
-{% extends 'main.html' %} 
+{% extends 'main.html' %} {% block content %}
 
-{% block content %}
+<h1>Projects Templates</h1>
+<table>
+  <tr>
+    <th>Project</th>
+    <th>Positive Votes</th>
+    <th>Votes</th>
+  </tr>
 
-  <h1>Projects Templates</h1>
-  {% for project in projects %}:
-    <h1>
-        ID ----> {{project.id}}
-        <br>
-        Title ----> <a href = "{% url 'project' project.id %}"> {{project.title}}</a>
-        <br>
-        Description ----> {{project.description}}
-    </h1>
-    <br>
+  {% for project in projects %}
+  <tr>
+    <td>{{project.title}}</td>
+    <td>{{project.vote_ratio}}</td>
+    <td>{{project.vote_total}}</td>
+    <td>{{project.created}}</td>
+
+    <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
+    <td><a href="{% url 'project' project.id %}">View</a></td>
+    <td><a href="{% url 'delete-template' project.id %}">Delete</a></td>
+  </tr>
   {% endfor %}
+</table>
 {% endblock content%}
